--- a/views/tienda/ventas.hbs
+++ b/views/tienda/ventas.hbs
@@ -26,7 +26,7 @@
                     </td>
                     <td class="ventas-btncont">
                         <span class="carrito-precio">${{precio}}</span>
-                        <a href="/tienda/entregarventa/{{id}}" class="btn btn-danger">Entregar venta</a>
+                        <a href="/tienda/entregarventa/{{id}}" class="btn btn-danger btn-entrega">Entregar venta</a>
                     </td>
                 </tr>
                 {{/each}}
