--- a/views/tienda/tienda.hbs
+++ b/views/tienda/tienda.hbs
@@ -1,4 +1,4 @@
-<h1 class="tienda-title">TIENDA ONLINE</h1>
+<h1 class="tienda-title">TIENDA ONLINE <i class="fas fa-store"></i></h1>
 <div class="tienda-menu"></div>
 <div class="productos-cards-container">
 
