--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1006,6 +1006,12 @@ table{
     width: 100%;
   }
 
+  .fa-bars{
+    font-size: 1.7rem;
+    margin: 1% 0 0 1%;
+    color: rgb(77, 76, 76);
+  }
+
   .navbar-container__desktop {
     display: none;
   }
