--- a/views/partials/home.hbs
+++ b/views/partials/home.hbs
@@ -41,10 +41,10 @@
             <input class="pedidos-form-items" type="number" placeholder="Ingresá tu número telefónico">
             <input class="pedidos-form-items" type="email" name="_replyto" id="mail" placeholder="Email"> 
             <input class="pedidos-form-items" type="date"  name="birthday"> 
-            <label class="pedidos-form-items-file-label" for="file"><span class="file">Cargá tu receta</span></label>
-            <span class="file"><input class="pedidos-form-items-file" type="file" id="file" name="file"></span>
+            {{!-- <label class="pedidos-form-items-file-label" for="file"><span class="file">Cargá tu receta</span></label> --}}
+            <input class="pedidos-form-items-file" type="file" id="file" name="file">
             <textarea name="texto" cols="30" rows="10"></textarea>
-            <input class="pedidos-form-button" class="button-submit" type="submit" id="enviar">
+            <input class="pedidos-form-button" type="submit" id="enviar">
         </form>
     </section>
     <!-- Fin Pedidos -->
